--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "daisyui": "^2.15.4",
+    "echarts": "^5.3.3",
+    "echarts-for-react": "^3.0.2",
     "react": "^18.0.0",
+    "react-countup": "^6.3.0",
     "react-dom": "^18.0.0",
     "react-query": "^3.39.1"
   },
