--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "daisyui": "^2.15.4",
+    "date-fns": "^2.28.0",
     "echarts": "^5.3.3",
     "echarts-for-react": "^3.0.2",
     "react": "^18.0.0",
