--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "daisyui": "^2.15.4",
     "date-fns": "^2.28.0",
     "echarts": "^5.3.3",
